# JOBCONNECT

./: .gitignore  .render-buildpacks  .replit  Procfile  build.sh  pyproject.toml  render.yaml  replit.md  requirements.txt
accounts/: admin.py  middleware.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
jobportal/: settings.py  urls.py
jobs/: admin.py  models.py  urls.py  views.py
jobs/migrations/: 0001_initial.py  0002_application_is_active.py
jobs/templatetags/: query_extras.py
templates/: base.html  navbar.html
templates/accounts/: dashboard.html  edit_employer_profile.html  edit_seeker_profile.html  employer_dashboard.html  login.html  register.html  seeker_dashboard.html
templates/jobs/: apply_job.html  create_job.html  delete_application.html  delete_job.html  edit_job.html  home.html  job_detail.html  job_list.html  view_applicants.html
